# table_look_up_AI_Assistant

./: .env  .gitignore  README.md  pyproject.toml
src/: main.py
src/heat_table_look_up_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/heat_table_look_up_assistant/cli/: main.py
src/heat_table_look_up_assistant/cli/commands/: chat.py  config.py
src/heat_table_look_up_assistant/core/: config.py
src/heat_table_look_up_assistant/core/auth/: auth_db.py
